force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/cgcloud__Contract_Payment_Tactic__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between a contract payment and contract tactics, used to check for what contract tactics the payment is applicable because the customer has met the agreement.</description>
    <label>Contract Payment Tactic</label>
    <nameField>
        <displayFormat>CPT-{00000000}</displayFormat>
        <label>Contract Payment Tactic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payment Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>