force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Payment Tactics</relationshipLabel>
    <relationshipName>Contract_Payment_Tactics_Account</relationshipName>
    <type>Lookup</type>
</CustomField>