force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Actual_Costs__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>