force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Contract__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Contract__c.cgcloud__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>cgcloud__Contract__c.cgcloud__Phase__c</field>
            <operation>equals</operation>
            <value>Committed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Contract__c</referenceTo>
    <relationshipLabel>Contract Payment Tactics</relationshipLabel>
    <relationshipName>Contract_Payment_Tactics_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>