force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Contract_Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract_Payment__c</fullName>
    <label>Contract Payment</label>
    <referenceTo>cgcloud__Contract_Payment__c</referenceTo>
    <relationshipLabel>Contract Payment Tactics</relationshipLabel>
    <relationshipName>Contract_Payment_Tactics_ContractPayment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>