force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Contract_Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract_Tactic_Template__c</fullName>
    <formula>cgcloud__Contract_Tactic__r.cgcloud__Contract_Tactic_Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Tactic Template</label>
    <type>Text</type>
</CustomField>