force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Rejected_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rejected_Amount__c</fullName>
    <formula>IF(ISPICKVAL(cgcloud__Status__c , &apos;FullRejection&apos;),  cgcloud__Actual_Costs__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>