force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/fields/cgcloud__Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>FullRejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>