force-app/main/default/objects/cgcloud__Contract_Payment_Tactic__c/validationRules/cgcloud__Contract_Payment_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Contract_Payment_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(cgcloud__Contract_Payment__c)</errorConditionFormula>
    <errorMessage>The Contract Payment can&apos;t be edited after Contract Payment Tactic creation.</errorMessage>
</ValidationRule>